--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -39,16 +39,22 @@
             android:padding="5dp"
             android:orientation="horizontal">
 
-
-
-            <de.hdodenhof.circleimageview.CircleImageView
+            <androidx.cardview.widget.CardView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/person"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FE2C54"
-                android:id="@+id/chatImageViewUser"
-                tools:ignore="MissingClass" />
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp"
+                android:layout_margin="5dp">
+
+                <ImageView
+                    android:id="@+id/chatImageViewUser"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/person"
+                    android:scaleType="centerCrop" />
+            </androidx.cardview.widget.CardView>
+
+
 
 
             <TextView
