--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
 
     <data>
@@ -50,17 +50,24 @@
         </androidx.appcompat.widget.Toolbar>
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_marginTop="30dp"
-            android:id="@+id/settingUpdateImage"
-            android:layout_marginBottom="15dp"
+
+        <androidx.cardview.widget.CardView
             android:layout_width="160dp"
             android:layout_height="160dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="15dp"
+            app:cardCornerRadius="50dp"
+        app:cardElevation="0dp"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/settingUpdateImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/person"
-            android:layout_gravity="center"
-            android:padding="15dp"
-            app:civ_border_width="1dp"
-            app:civ_border_color="#FE2C54"/>
+            android:scaleType="centerCrop" />
+    </androidx.cardview.widget.CardView>
+
 
 
 
