--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Developed by Developer Sam 2023 ©"
+            android:text="Developed by Hüsne Sena 2025 ©"
             android:textColor="@color/black"
             android:fontFamily="@font/nunito_bold"
             android:textSize="16sp"
