--- a/app/src/main/res/layout/fragment_chatfrom_home.xml
+++ b/app/src/main/res/layout/fragment_chatfrom_home.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.example.chatmessenger.mvvm.ChatAppViewModel" />
+            type="com.example.mychat.mvvm.ChatAppViewModel" />
 
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -126,12 +126,13 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_weight="1"
-                android:text="@={viewModel.message}"
                 android:background="@android:color/transparent"
                 android:hint="Enter Message"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
-                android:maxLines="6" />
+                android:maxLines="6"
+                android:minHeight="48dp"
+                android:text="@={viewModel.message}" />
 
             <Button
                 android:id="@+id/sendBtn"
