--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.mychat.mvvm.ChatAppViewmodel" />
+            type="com.example.mychat.mvvm.ChatAppViewModel" />
 
     </data>
 
