--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -48,7 +48,6 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_margin="10dp"
                 android:background="@android:color/transparent"
                 app:boxBackgroundColor="@android:color/transparent">
@@ -62,6 +61,7 @@
                     android:importantForAutofill="no"
                     android:inputType="textEmailAddress"
                     android:maxLength="25"
+                    android:minHeight="48dp"
                     android:paddingStart="10dp"
                     android:paddingEnd="0dp"
                     tools:background="@android:color/transparent" />
@@ -71,7 +71,6 @@
                 android:id="@+id/editTextPasswordInputLayout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_margin="10dp"
                 android:background="@android:color/transparent"
                 android:padding="0dp"
@@ -89,6 +88,7 @@
                     android:maxLength="25"
                     android:paddingStart="10dp"
                     android:paddingEnd="0dp"
+                    android:minHeight="48dp"
                     tools:background="@android:color/transparent" />
             </com.google.android.material.textfield.TextInputLayout>
 
