--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyChat" parent="Theme.MaterialComponents.Light.NoActionBar" />
+    <style name="Theme.MyChat" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Buraya özelleştirmeler ekleyebilirsinn -->
+    </style>
 
 </resources>
