--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -46,11 +46,13 @@
                 app:cardElevation="0dp"
                 android:layout_margin="5dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/chatImageViewUser"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/person"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF0000"
                     android:scaleType="centerCrop" />
             </androidx.cardview.widget.CardView>
 
