--- a/app/src/main/res/layout/fragment_chatfrom_home.xml
+++ b/app/src/main/res/layout/fragment_chatfrom_home.xml
@@ -48,7 +48,7 @@
                     app:cardElevation="0dp"
                     android:layout_margin="5dp">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/chatImageViewUser"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
