--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_homeFragment_to_chatFromHomeFragment"
+            app:destination="@id/chatFromHomeFragment" />
     </fragment>
 
     <!-- Chat Fragment -->
@@ -61,6 +64,17 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/chatFromHomeFragment"
+        android:name="com.example.mychat.fragments.ChatFromHomeFragment"
+        android:label="ChatFromHomeFragment" >
+        <action
+            android:id="@+id/action_chatFromHomeFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <argument
+            android:name="recentchats"
+            app:argType="com.example.mychat.modal.RecentChats" />
     </fragment>
 
 </navigation>
